# drake-finger-sim

./: .gitignore  README.md  requirements.repos
blender_files/: README.md  sdf_blender_export.py  urdf_blender_export.py
finger_bridge/: CMakeLists.txt  README.md  package.xml
finger_bridge/include/serial_interface/: serial_interface.hpp
finger_bridge/src/: hardware_bridge.cpp  serial_interface.cpp  simulation_bridge.cpp
finger_control/: CMakeLists.txt  README.md  package.xml
finger_control/config/: demo.yaml  sim_whackamole.rviz
finger_control/include/finger_control/: finger_control_base.hpp
finger_control/launch/: 3d_waypoint_tracking.launch.xml  demo.launch.xml  hardware_control.launch.xml  hardware_demo.launch.xml  pixel_whackamole.launch.xml  simulation_control.launch.xml  simulation_demo.launch.xml  simulation_whackamole.launch.xml
finger_control/src/: demo.cpp  finger_control.cpp  whackamole.cpp
finger_description/: README.md  package.xml
finger_description/config/: finger.yaml
finger_description/launch/: fingerviz.launch.xml
finger_description/meshes/sdf/: joint_axes.yaml
finger_description/meshes/urdf/: joint_axes.yaml
finger_description/sdf/: finger2.sdf  finger3.sdf
finger_description/src/: workspace.stl  workspace_visualizer.py
finger_description/urdf/: finger3.urdf  setpoint_finger.urdf  setpoint_finger2.urdf  setpoint_finger3.urdf
finger_description/urdf_new/: finger.urdf
finger_interfaces/: CMakeLists.txt  README.md  package.xml
finger_interfaces/action/: Cartesian.action  Chirp.action  ChirpVelocity.action  Linear.action  LinearStep.action
finger_interfaces/msg/: MotorActivity.msg  MotorFeedback.msg
finger_planner/: README.md  package.xml
finger_planner/config/: movement_config.yaml
finger_planner/src/: finger_planner.cpp
finger_recorder/: README.md  joint_plotter.py  package.xml  plotter.py  setup.py
finger_recorder/finger_recorder/: finger_recorder.py
finger_recorder/june01-2026/: texts.txt
finger_recorder/june01-2026/test0/: finger_bag_20260601_143324_0.mcap  metadata.yaml
finger_recorder/june01-2026/test1/: finger_bag_20260601_143851_0.mcap  metadata.yaml
finger_recorder/june01-2026/test2/: finger_bag_20260601_145047_0.mcap  metadata.yaml
finger_recorder/june01-2026/test3/: finger_bag_20260601_174156_0.mcap  metadata.yaml
finger_recorder/june01-2026/test4/: finger_bag_20260601_174517_0.mcap  metadata.yaml
finger_recorder/june01-2026/test5/: finger_bag_20260601_180322_0.mcap  metadata.yaml
finger_recorder/may21-2026-position-test-results/: tests.txt
finger_recorder/may21-2026-position-test-results/test1/: finger_bag_20260521_143747_0.mcap  metadata.yaml
finger_recorder/may21-2026-position-test-results/test2/: finger_bag_20260521_144003_0.mcap  metadata.yaml
finger_recorder/may21-2026-position-test-results/test3/: finger_bag_20260521_144740_0.mcap  metadata.yaml
finger_recorder/may21-2026-position-test-results/test4/: finger_bag_20260521_145029_0.mcap  metadata.yaml
finger_recorder/may21-2026-position-test-results/test5/: finger_bag_20260521_145355_0.mcap  metadata.yaml
finger_recorder/may28-2026/: tests.txt
finger_recorder/may28-2026/test0/: finger_bag_20260528_172021_0.mcap  metadata.yaml
finger_recorder/may28-2026/test1/: finger_bag_20260528_172048_0.mcap  metadata.yaml
finger_recorder/may28-2026/test2/: finger_bag_20260528_172252_0.mcap  metadata.yaml
finger_recorder/may28-2026/test3/: finger_bag_20260528_172314_0.mcap  metadata.yaml
finger_recorder/may28-2026/test4/: finger_bag_20260528_172541_0.mcap  metadata.yaml
finger_recorder/may28-2026/test5/: finger_bag_20260528_172605_0.mcap  metadata.yaml
finger_recorder/may28-2026/test6/: finger_bag_20260528_172653_0.mcap  metadata.yaml
finger_recorder/may28-2026/test7/: finger_bag_20260528_172718_0.mcap  metadata.yaml
finger_recorder/may28-2026/test8/: finger_bag_20260528_175211_0.mcap  metadata.yaml  plotted_data.csv
finger_recorder/may28-2026/test9/: finger_bag_20260528_175306_0.mcap  metadata.yaml  plotted_data.csv
finger_recorder/may31-2026/: tests.txt
finger_recorder/may31-2026/test0/: finger_bag_20260531_205202_0.mcap  metadata.yaml
finger_recorder/may31-2026/test1/: finger_bag_20260531_210439_0.mcap  metadata.yaml
finger_simulation/: README.md  package.xml  setup.py
finger_simulation/config/: base_sim.rviz
finger_simulation/finger_simulation/: 4barfinger_sim.py  basic_setpoint_sim.py  basic_sim.py
finger_simulation/finger_simulation/systems/: drake2ros_system.py  drake2ros_system_kinematic.py  finger_pulley_system.py  motor_feedback_system.py  motor_radius_system.py  ros2drake_system.py  ros2drake_system_kinematic.py  tendon_feedback_system.py
finger_vision/: README.md  package.xml  setup.cfg  setup.py
finger_vision/finger_vision/: finger_vision.py
finger_vision2/: CMakeLists.txt  README.md  package.xml
finger_vision2/config/: phone_tf.yaml
finger_vision2/launch/: vision2.launch.xml
finger_vision2/src/: fake_vision.cpp  pixel_vision.cpp  simulation_vision.cpp  vision.cpp
fingerlib/: README.md  ik_failing_to_converge.txt
fingerlib/include/fingerlib/: joint_trajectory.hpp  transformer.hpp
fingerlib/src/: joint_trajectory.cpp  pos_controller.cpp  transformer.cpp
fingerlib/tests/: test_joint_traj.cpp  test_transformer.cpp
