<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>finger_vision2</name>
  <version>0.0.0</version>
  <description>Identify and publish waypoints using CV</description>
  <maintainer email="michael.jenz77@gmail.com">Mjenz</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>apriltag_ros</exec_depend>

  <depend>rclcpp</depend>
  <depend>cv_bridge</depend>
  <depend>OpenCV</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>rcl_interfaces</depend>
  <depend>fingerlib</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
